# Pasta_RISCV

./: README.md
src/sv/: Cipher_add.v  Cipher_pasta_permute.v  Cipher_peripheral.sv  bus_arbiter2m1s.sv  bus_if.sv  bus_mux1mNs.sv  byte_reverse.v  data_ram.sv  eoc_controller.sv  gpo_peripheral.sv  grain_lfsr.sv  ibex.svh  ibex_top.sv  instr_rom.sv  lfsr_peripheral.sv  parallel_out.sv  prim_clock_gating.sv
src/sv/pasta_src/: mat_gen.v  mat_mul.v  mix_column_sb.v  mod_add_wrapper.v  mod_mul_wrapper.v  pasta_permute.v  round_constant.v  xof_shake128.v
src/sv/pasta_src/Keccak/: keccak_absorb.v  keccak_f1600.v  keccak_round_constants.v  keccak_round_sujoy.v  keccak_speed.v  keccak_squeeze.v  keccak_state_buffer.v  wrapper_Keccak.v
src/sw/Cipher/: CMakeLists.txt  Cipher.c  Cipher.ref
src/tb/: tb_top.sv
